--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,18 +1,18 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion = "30.0.2"
+    compileSdkVersion 31
+    buildToolsVersion = "31.0.0"
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
     }
 }
 
 dependencies {
-    compile 'com.google.zxing:core:3.2.1'
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation "com.facebook.react:react-native:+"  // From node_modules
 }
